--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Home</a>
-    <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Home1</a>
+    <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="http://greysky.cc">Read GreySky Webcomics</a>
        
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
